--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,16 @@ body {
 }
 
 .custom-heading {
-    color: red;
-    font-family: 'Lucida Calligraphy', sans-serif;
+    color: rainbow;
+    font-family: 'Castellar', sans-serif;
     text-align: center;
     font-weight: bold;
 }
 
 hr {
     border: 1px solid #000;
-    width: 80%;
-    margin: 10px auto;
+    width: 100%;
+    margin: 5px auto;
 }
 
 .container {
