--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 }
 
 .custom-heading {
-    color: rainbow;
-    font-family: 'Castellar', sans-serif;
+    color: Brown;
+    font-family: 'ENGRAVERS MT', sans-serif;
     text-align: center;
     font-weight: bold;
 }
