--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .custom-heading {
-    color: brown;
+    color: #3E5771;
     font-family: 'ENGRAVERS MT', sans-serif;
     text-align: center;
     font-weight: bold;
